--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,9 @@
             ],
             "styles": [
               "src/assets/styles/styles.scss"
+            ],
+            "polyfills": [
+              "@angular/localize/init"
             ]
           },
           "configurations": {
