--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,10 @@ version: "3.9"
 
 services:
   parker-frontend:
-    image: pms-parker-frontend:latest
+    image: ${IMAGE_TAG}
     ports:
       - "8086:80"
     deploy:
       replicas: 3
       restart_policy:
         condition: on-failure
-
