--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,13 @@ services:
     image: ${IMAGE_TAG}
     ports:
       - "8086:80"
+    networks:
+      - pms-net
     deploy:
       replicas: 3
       restart_policy:
         condition: on-failure
+
+networks:
+  pms-net:
+    external: true
