--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,11 @@ version: "3.9"
 
 services:
   parker-frontend:
-    image: pms-parker-frontend:latest
+    image: ${IMAGE_TAG}
     ports:
       - "8086:80"
+    networks:
+      - pms-net
     deploy:
       replicas: 3
       restart_policy:
